--- a/blogspot.html
+++ b/blogspot.html
@@ -2,9 +2,16 @@
     <head>
         <title>El titulo del post</title>
         <link rel="stylesheet" href="css/estilos.css" />
-    <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
+    </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
-    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6b761af4391a7543',m:'UND4hlrkhJDCXcq.jkOUNSxF_y07SS1EDfb1EnqQWU0-1638464362-0-AVw7lCq1O0iZBgUQatNbM4zHve6oAp2L4MtKiGKumHYs2PB2I7q+4pgPHeEC4SRd3vpVepv9Oy1XF5u/ekMC3zrXMZakYDlMFhBTatJutwsRx81k5i8rwFbCuF7FZjC7OQlmCEcDd7WA50mi1cP5XhKesYjzD0QFxxKY7l2cjnCqiAKRKq405nYf3LfQDXiuZz6oWMiOTNhoKQJ9l1VrWtiOs3sdBF/MQhjc1QWDfJb2yTUqG2X8nVAcMaRAwtWZqg==',s:[0x3f8f10c2ad,0xa0a716a65d],}})();</script></body>
+        <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            </div>
+        </div>
+    </body>
 </html>
