--- a/blogspot.html
+++ b/blogspot.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido al Blogspot</title>
+        <title>Bienvenido al Blogspot 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
