--- a/blogspot.html
+++ b/blogspot.html
@@ -15,6 +15,9 @@
                 <p>este es el parrafo nuevo para la prueba siguiente</p>
                 <p>una linea mas de prueba</p>
             </div>
+            <div id="footer">
+                Hecho por mi
+            </div>
         </div>
     </body>
 </html>
